tests/enum_into/compile_fail/field/duplicate_field_mapping.stderr
error: Multiple mapping found for target enum `Target`
 --> tests/enum_into/compile_fail/field/duplicate_field_mapping.rs:8:9
  |
8 |         #[enum_into(Target::Struct.a, Target::Struct.b)]
  |         ^
